--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-cmdstanpy @ file:///home/conda/feedstock_root/build_artifacts/cmdstanpy_1760997237797/work
+cmdstanpy
 matplotlib==3.10.7
-matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1761214490209/work
 numpy==2.1.2
 pandas==2.3.2
 patsy==1.0.2
